--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-animated-cursor": "^2.5.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-scripts": "^5.0.1",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4"
