--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^9.58.5",
+    "@react-three/fiber": "^8.13.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-scripts": "^5.0.1",
+    "three": "^0.175.0",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
