--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
     "three": "^0.175.0",
     "use-local-storage": "^2.3.6",
